# A-sistemo

./: AGENTS.md  README.md  pyproject.toml
src/A_sistemo/: __init__.py  cli.py
src/A_sistemo/_shared/: __init__.py  formatting.py  runner.py
src/A_sistemo/cli/: __init__.py  bash_alias.py  bluetooth.py  disko.py  info.py  particio.py  rubo.py  sistemo.py  usb.py  wifi.py
src/A_sistemo/services/: __init__.py  bash_alias_db.py  bluetooth_service.py  disk_service.py  installer.py  partition_service.py  recycle_bin.py  system_info.py  usb_service.py  wifi_service.py
tests/: test_bash_alias_db.py  test_sistemo.py
