[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "A-sistemo"
version = "0.1.0"
description = "A-sistemo - System management commands (info, wifi, bluhdento, usb, disko, rubo)"
readme = "README.md"
license = "GPL-3.0-only"
authors = [{name = "Rong ZHOU", email = "rong.zhou6@etu.univ-lorraine.fr"}]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[project.entry-points."A.commands"]
sistemo = "A_sistemo.cli:app"

[project.scripts]
A-sistemo = "A_sistemo.cli:sistemo"

[tool.hatch.build.targets.wheel]
packages = ["src/A_sistemo"]

# Poetry kept for local path dependency
[tool.poetry]
name = "A-sistemo"
version = "0.1.0"
description = "A-sistemo - System management commands (info, wifi, bluhdento, usb, disko, rubo)"
authors = ["Rong ZHOU <rong.zhou6@etu.univ-lorraine.fr>"]
readme = "README.md"
license = "GPL-3.0-only"
packages = [{ include = "A_sistemo", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
A-core = { path = "../A-core", develop = true }
psutil = ">=5.9"
rich = ">=13"
typer = ">=0.12"

[tool.poetry.plugins."A.commands"]
sistemo = "A_sistemo.cli:app"

[tool.poetry.scripts]
A-sistemo = "A_sistemo.cli:sistemo"

[tool.poetry.group.dev.dependencies]
pytest = ">=8"
pytest-mock = ">=3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]